--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,12 +7,12 @@ plugins {
 
 android {
     namespace 'com.tomasrepcik.turbineexample'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.tomasrepcik.turbineexample"
         minSdk 24
-        targetSdk 33
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
@@ -44,9 +44,10 @@ dependencies {
     kapt "com.google.dagger:hilt-compiler:$hilt_version"
     implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
 
+    testImplementation 'androidx.test.ext:junit-ktx:1.1.5'
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.1"
     testImplementation "org.mockito:mockito-core:5.3.1"
-    testImplementation "org.mockito.kotlin:mockito-kotlin:4.1.0"
+    testImplementation "org.mockito.kotlin:mockito-kotlin:5.0.0"
     testImplementation 'app.cash.turbine:turbine:0.13.0'
 
 
